[tool.poetry]
name = "f5"
version = "0.1.0"
description = ""
authors = ["Robert Mackenzie <robert.mackenzie3@sky.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
